--- a/face-detection-demo/css/demo.css
+++ b/face-detection-demo/css/demo.css
@@ -84,3 +84,25 @@ object {
 	z-index:1000;
 	margin-top:9px; /*forced vertical centering*/
 }
+
+.outOfTheWay {
+    left: -999em;
+    position: absolute;
+    top: -999em;
+}
+
+.warningAreaContainer table {
+	width: 100%;
+}
+.warningAreaContainer table span.warning {
+	font-size: 1.1em;	
+}
+
+.warningAreaContainer span.warning {
+	font-size: .8em;	
+}
+
+.advisory {
+	padding: .25em 0 .25em 2.5em;
+	min-height: 30px;
+}
